--- a/src/global.css
+++ b/src/global.css
@@ -2,27 +2,28 @@
 
 @layer base {
   h1 {
-    @apply text-4xl leading-tight mb-4;
+    @apply text-2xl sm:text-3xl md:text-4xl mb-4;
   }
 
   h2 {
-    @apply text-3xl leading-snug mb-4;
+    @apply text-xl sm:text-2xl md:text-3xl mb-4;
   }
 
   h3 {
-    @apply text-2xl leading-snug mb-3;
+    @apply text-lg sm:text-xl md:text-2xl mb-3;
   }
 
   h4 {
-    @apply text-xl leading-normal mb-3;
+    @apply sm:text-lg md:text-xl mb-3;
   }
 
   h5 {
-    @apply text-lg leading-normal mb-2;
+    @apply sm:text-base md:text-lg mb-2;
   }
 
   h6 {
-    @apply text-base leading-relaxed mb-2;
+    @apply sm:text-sm md:text-base mb-2;
   }
+
 }
 
