--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,22 @@
 @import "tailwindcss";
 
+* {
+  font-family: Roboto, sans-serif;
+}
+
+#root {
+  height: 100vh;
+  width: 100vw;
+}
+
+.roboto-variable {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+
 @layer base {
   h1 {
     @apply text-2xl sm:text-3xl md:text-4xl mb-4;
